--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,11 +1,12 @@
 <div class="container">
 
-  <h1 class="jumbotron"><center>Welcome to Super Rentals</center></h1>
+  <h1 class="jumbotron header"><center>$UPER   RENTAL$</center></h1>
 
   {{outlet}}
 
   <footer>
-    {{#link-to 'about'}}About{{/link-to}} |
-    {{#link-to 'contact'}}Contact{{/link-to}}
+    <span class="links">{{#link-to 'index'}}Home{{/link-to}}</span>
+    <span class="links">{{#link-to 'about'}}About{{/link-to}}</span>
+    <span class="links">{{#link-to 'contact'}}Contact{{/link-to}}</span>
   </footer>
 </div>
