--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,27 +1,22 @@
-<p>We hope you find exactly what you're looking for in a place to stay.</p>
-
-  <div class="row">
-    <div class="col-md-8">
-      <ul>
-        {{#each model.rentals as |rental|}}
-           {{rental-tile rental=rental}}
-        {{/each}}
-      </ul>
-
-      {{new-rental save2="save3"}}
-    </div>
-
-    <div class="col-md-4">
-      <h4>Announcements:</h4>
-      <ul>
-        {{#each model.announcements as |announcement|}}
-          <li>
-            <p>Message: {{announcement.message}}</p>
-            <p>By {{announcement.author}} on {{announcement.date}}</p>
-            <hr>
-          </li>
-        {{/each}}
-      </ul>
-    </div>
-
+<div class="col-md-8">
+  <h2>Available Rentals</h2>
+  <div>
+    {{#each model.rentals as |rental|}}
+       {{rental-tile rental=rental}}
+    {{/each}}
   </div>
+  {{new-rental save2="save3"}}
+</div>
+
+<div class="col-md-4">
+  <h2>Announcements</h2>
+  <ul>
+    {{#each model.announcements as |announcement|}}
+      <li>
+        <p>Message: {{announcement.message}}</p>
+        <p>By {{announcement.author}} on {{announcement.date}}</p>
+        <hr>
+      </li>
+    {{/each}}
+  </ul>
+</div>
